Fix sorting flicker

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -41,8 +41,8 @@ form{
 }
 
 #left-menu a{
-  width: 100%;
-  display: block;
+  //width: 100%;
+  //display: block;
 }
 
 #left-menu li{
